Add second username

--- a/names.html
+++ b/names.html
@@ -14,5 +14,10 @@
     <p>datuna</p>
     <p>lukenta</p>
     <p>giorga</p>
+
+    
+    <h1>UserName</h1>
+     <p>yvertava<p>
+     <p>sirtava</p>
 </body>
 </html>
