--- a/names.html
+++ b/names.html
@@ -8,15 +8,16 @@
 </head>
 <body>
     <h1>Names<h1>
-
+     
+    <p><i>temo<i><p>
+ 
     <p>temura</p>
     <p>nikusha</p>
     <p>datuna</p>
     <p>lukenta</p>
     <p>giorga</p>
-<<<<<<< HEAD
     <p>sirtuava</p>
-=======
+
 
      
     <h1>UserName</h1>
