add this update

--- a/names.html
+++ b/names.html
@@ -9,8 +9,8 @@
 <body>
     <h1>Names<h1>
      
-    <p><i>temo<i><p>
- 
+    <p><i>temo<i></p>
+    <p>goderdzi</p>
     <p>temura</p>
     <p>nikusha</p>
     <p>datuna</p>
